--- a/src/flavors/bogtobay/static/css/custom.css
+++ b/src/flavors/bogtobay/static/css/custom.css
@@ -11,41 +11,28 @@
 
 #site-title a:link,
 #site-title a:visited {
-  color: #c5dea3 !important;
+  color: #acd670 !important;
   font-weight: normal;
   font-family: 'Sigmar One', 'Arial Black', sans-serif !important;
   display: block;
   float: left;
-  width: 350px;
-  height: 50px;
+  margin-right: 50px;
   overflow: hidden;
-  text-shadow:
+/*  text-shadow:
    -1px -1px 0 #000,  
     1px -1px 0 #000,
     -1px 1px 0 #000,
-     1px 1px 0 #000;
+     1px 1px 0 #000;*/
+  text-shadow: 2px -2px 2px rgba(0, 0, 0, 0.5);
 }
-
-.menu-item a {
-  color: white !important;
-  letter-spacing: 0.1em;
-  text-shadow:
-   -1px -1px 0 #000,  
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-     1px 1px 0 #000;
-}
-
 
 /* =Header
 -------------------------------------------------------------- */
 @media only screen and (min-width: 60em) {
   #site-header {
-    background: url(images/longfellow_creek1.jpg);
-  }
-
-  #site-title {
-    margin-left: 65px;
+    /*background: url(images/longfellow_creek1.jpg);*/
+    background: none;
+    background-color: #FFF;
   }
 
   .content-visible #main-btns-container {
@@ -72,14 +59,11 @@
 @media only screen and (max-width: 60em) {
   #site-header {
     background: none;
-    background-color: #605245;
+    background-color: #FFF;
   }
 
   #site-title a:link,
   #site-title a:visited {
-    margin-top: 5px !important;
-    width: 180px;
-    height: 25px;
     background-size: 180px auto;
   }
   #place-form-type-choice {
@@ -98,10 +82,8 @@
 @media only screen and (max-width: 60em) {
   #site-title a:link,
   #site-title a:visited {
-    width: 180px;
-    height: 25px;
     background-size: 180px auto;
-    margin: 10px 0 0 0;
+    margin-top: 5px;
   }
 }
 
