--- a/src/flavors/bogtobay/static/css/custom.css
+++ b/src/flavors/bogtobay/static/css/custom.css
@@ -106,6 +106,74 @@
   color: #FFF !important;
 }
 
+/* =Grid-based layout on about page
+Adapted from http://littlesnippets.net/snip1579/
+-------------------------------------------------------------- */
+.snip1579 {
+  font-family: Roboto, sans-serif;
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  margin: 0;
+  width: 45%;
+  background-color: #000000;
+  color: #ffffff;
+  text-align: left;
+  font-size: 16px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+}
+.snip1579 * {
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.snip1579 img {
+  vertical-align: top;
+  min-width: 100%;
+}
+.snip1579 figcaption {
+  position: absolute;
+  height: 30px;
+  left: 15px;
+  right: 15px;
+  bottom: 15px;
+  overflow: hidden;
+  padding: 5px;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+.snip1579 h3 {
+  text-transform: uppercase;
+  font-size: 1em;
+  line-height: 1em;
+  margin-top: 3px;
+  margin-bottom: 5px;
+}
+.snip1579 h5 {
+  font-weight: 400;
+  margin: 0;
+  text-transform: uppercase;
+  color: #bbb;
+  letter-spacing: 1px;
+}
+.snip1579 blockquote {
+  padding: 0;
+  margin: 0;
+  font-style: italic;
+  font-size: 1em;
+}
+.snip1579 a {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.snip1579:hover figcaption,
+.snip1579.hover figcaption {
+  height: calc(80%);
+}
+
 
 /* =Media Queries
 -------------------------------------------------------------- */
