--- a/src/flavors/bogtobay/static/css/custom.css
+++ b/src/flavors/bogtobay/static/css/custom.css
@@ -215,6 +215,14 @@ Adapted from http://littlesnippets.net/snip1579/
       margin: 0;
       border: 2px solid white;
   }
+
+  .snip1579 {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 70%;
+    margin-bottom: 8px;
+  }
 }
 
 @media only screen and (max-width: 60em) {
