--- a/src/base/static/scss/_forms.scss
+++ b/src/base/static/scss/_forms.scss
@@ -127,6 +127,13 @@ select {
     background-color: #ffffe0;
 }
 
+/* messaging for admin-only dynamic form category buttons */
+.form-category-admin-msg {
+    font-size: 0.7em;
+    text-transform: lowercase;
+    padding-left: 10px;
+}
+
 /* admin-only form fields */
 .is-admin-field {
     background-color: rgba(250, 128, 114, 0.48);
