--- a/src/flavors/greensboropb/templates/index.html
+++ b/src/flavors/greensboropb/templates/index.html
@@ -55,14 +55,14 @@
  -->
 {% block sidebar %}
 
-<ul class="legend">
+<!-- <ul class="legend">
   <li class="clearfix"><img src="/static/css/images/markers/new/fountain-small.png" width="25" height="30"> {% trans 'Art &amp; Culture' %}</li>
   <li class="clearfix"><img src="/static/css/images/markers/new/playground-small.png" width="25" height="30"> {% trans 'Parks &amp; Recreation' %}</li>
   <li class="clearfix"><img src="/static/css/images/markers/new/street-sidewalk-small.png" width="25" height="30"> {% trans 'Streets &amp; Sidewalks' %}</li>
   <li class="clearfix"><img src="/static/css/images/markers/new/health-small.png" width="25" height="30"> {% trans 'Public Health' %}</li>
   <li class="clearfix"><img src="/static/css/images/markers/new/safety-small.png" width="25" height="30"> {% trans 'Safety &amp; Environment' %}</li>
   <li class="clearfix"><img src="/static/css/images/markers/new/idea-small.png" width="25" height="30"> {% trans 'Other' %}</li>
-</ul>
+</ul> -->
 {% endblock %}
 
 <!--
