--- a/src/flavors/greensboropb/static/css/custom.css
+++ b/src/flavors/greensboropb/static/css/custom.css
@@ -482,6 +482,9 @@ p.checkbox + p.select {
   #content {
     top: 123px !important;
   }
+  .activity-enabled.content-visible #map-container {
+    width: 40%;
+  }
 }
 
 @media only screen and (min-width: 70em) {
