--- a/src/flavors/greensboropb/static/css/custom.css
+++ b/src/flavors/greensboropb/static/css/custom.css
@@ -462,6 +462,7 @@ p.checkbox + p.select {
     text-shadow: none;
     box-shadow: none;
     border: 0;
+    padding-top: 10px;
   }
   a.list-toggle-btn:hover {
     background-color: #68bab9;
