move detail view edit controls to top of view; break out into partial template

--- a/src/base/static/scss/_content.scss
+++ b/src/base/static/scss/_content.scss
@@ -444,6 +444,10 @@ a.auth-inline {
 }
 
 /* place detail editor */
+.place-detail-edit-bar {
+    margin-bottom: 15px;
+}
+
 .img-placeholder {
     width: 250px;
     margin-left: auto;
