--- a/src/flavors/greensboropb/static/css/custom.css
+++ b/src/flavors/greensboropb/static/css/custom.css
@@ -1,6 +1,7 @@
 
 /* =Base Styles
 -------------------------------------------------------------- */
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
 
 /* Typography */
 body, select, input, textarea {
@@ -9,7 +10,7 @@ body, select, input, textarea {
 label { font-size: 1em; text-transform: none; color: #555; }
 
 h1 {
-  font-family: "brandon-grotesque";
+  font-family: "Josefin Sans", sans-serif;
   font-weight: 400;
   color: #336e94;
   line-height: 1.0;
@@ -17,14 +18,14 @@ h1 {
 }
 
 h2, h3, h4, h5 {
-  font-family: "brandon-grotesque";
+  font-family: "Josefin Sans", sans-serif;
   font-weight: 400;
   line-height: 1.0;
   color: #336e94;
 }
 
 li.clearfix {
-  font-family: "brandon-grotesque";
+  font-family: "Josefin Sans", sans-serif;
   font-weight: 400;
   color: #000000;
 }
