Improve geometry editor UI and workflow
- Editor controls are accessible within the place form
- Provide tooltip messages throughout editor workflow
- Add bespoke icon set
- Support point geometry

--- a/src/base/static/scss/_basic.scss
+++ b/src/base/static/scss/_basic.scss
@@ -153,8 +153,8 @@ hr {
 // Hide for both screenreaders and browsers
 
 .is-hidden, .hidden {
-    display: none;
-    visibility: hidden;
+    display: none !important;
+    visibility: hidden !important;
 }
 
 // Hide only visually, but have it available for screenreaders
